// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should get draft card from the DynamoDB 1`] = `
{
  "additionalInfo": undefined,
  "anchorage": undefined,
  "attention": undefined,
  "creationTimestamp": Any<Number>,
  "creator": "test2",
  "currentPublic": undefined,
  "designSpeed": undefined,
  "fairwayIds": "#1#",
  "fairways": [
    {
      "id": 1,
      "primary": true,
      "primarySequenceNumber": undefined,
      "secondary": false,
      "secondarySequenceNumber": undefined,
    },
  ],
  "generalInfo": undefined,
  "group": undefined,
  "harbors": undefined,
  "iceCondition": undefined,
  "id": "draft",
  "latest": undefined,
  "latestVersionUsed": undefined,
  "lineText": undefined,
  "mareographs": undefined,
  "modificationTimestamp": Any<Number>,
  "modifier": "test",
  "n2000HeightSystem": false,
  "name": {
    "en": "Testen2",
    "fi": "Testfi2",
    "sv": "Testsv2",
  },
  "navigationCondition": undefined,
  "pictures": undefined,
  "pilotRoutes": [
    {
      "id": 2,
      "name": "Reitti 2",
    },
  ],
  "speedLimit": undefined,
  "status": "DRAFT",
  "temporaryNotifications": [],
  "trafficService": {
    "pilot": {
      "email": undefined,
      "extraInfo": undefined,
      "fax": undefined,
      "internet": undefined,
      "phoneNumber": undefined,
      "places": [
        {
          "geometry": {
            "coordinates": [
              25.001,
              60.21,
            ],
            "type": "Point",
          },
          "id": 2,
          "name": {
            "en": "Luotsipaikka 2",
            "fi": "Luotsipaikka 2",
            "sv": "Luotsipaikka 2",
          },
          "pilotJourney": 2,
        },
      ],
    },
    "tugs": null,
    "vts": null,
  },
  "version": "v0",
  "vesselRecommendation": undefined,
  "visibility": undefined,
  "windRecommendation": undefined,
}
`;

exports[`should get public card from the DynamoDB 1`] = `
{
  "additionalInfo": undefined,
  "anchorage": undefined,
  "attention": undefined,
  "creationTimestamp": Any<Number>,
  "creator": "test",
  "currentPublic": undefined,
  "designSpeed": undefined,
  "fairwayIds": "#1#",
  "fairways": [
    {
      "id": 1,
      "primary": true,
      "primarySequenceNumber": 1,
      "secondary": false,
      "secondarySequenceNumber": 1,
    },
  ],
  "generalInfo": undefined,
  "group": undefined,
  "harbors": undefined,
  "iceCondition": undefined,
  "id": "public",
  "latest": undefined,
  "latestVersionUsed": undefined,
  "lineText": undefined,
  "mareographs": undefined,
  "modificationTimestamp": Any<Number>,
  "modifier": "test2",
  "n2000HeightSystem": false,
  "name": {
    "en": "Testen",
    "fi": "Testfi",
    "sv": "Testsv",
  },
  "navigationCondition": undefined,
  "pictures": undefined,
  "pilotRoutes": [
    {
      "id": 1,
      "name": "Reitti 1",
    },
  ],
  "speedLimit": undefined,
  "status": "PUBLIC",
  "temporaryNotifications": [],
  "trafficService": {
    "pilot": {
      "email": undefined,
      "extraInfo": undefined,
      "fax": undefined,
      "internet": undefined,
      "phoneNumber": undefined,
      "places": [
        {
          "geometry": {
            "coordinates": [
              26.43,
              60.28,
            ],
            "type": "Point",
          },
          "id": 1,
          "name": {
            "en": "Luotsipaikka 1",
            "fi": "Luotsipaikka 1",
            "sv": "Luotsipaikka 1",
          },
          "pilotJourney": 1,
        },
      ],
    },
    "tugs": null,
    "vts": null,
  },
  "version": "v0",
  "vesselRecommendation": undefined,
  "visibility": undefined,
  "windRecommendation": undefined,
}
`;
